# my_krml_24999690

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PACKAGE_REFERENCE.md  README.md  pyproject.toml
.github/workflows/: workflow.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/my_krml_24999690/: __init__.py
src/my_krml_24999690/data/: canvas.py  canvas_downloader.py  exploration.py  loaders.py  sets.py  test_sets.py
src/my_krml_24999690/features/: engineering.py  preprocessing.py
src/my_krml_24999690/models/: performance.py  tracking.py  training.py
src/my_krml_24999690/visualization/: eda.py
tests/: test_engineering.py  test_exploration.py  test_loaders.py  test_my_krml_24999690.py  test_preprocessing.py  test_public_api.py
tests/data/: test_canvas_downloader.py
tests/models/: test_performance.py  test_tracking.py  test_training.py
