[tool.poetry]
name = "my_krml_24999690"
version = "2025.0.1.3"
description = "Package for Assignment 1"
authors = ["Muhammad Iqbal"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
pandas = "2.2.2"
scikit-learn = "1.5.1"
pytest = "8.2.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
