[tool.poetry]
name = "my_krml_24999690"
version = "2026.1.1.3"
description = "Package for Assignment 1"
authors = ["Muhammad Iqbal"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
pandas = "2.2.2"
scikit-learn = "1.5.1"
pytest = "8.2.2"
matplotlib = "^3.10.9"
seaborn = "^0.13.2"
beautifulsoup4 = "^4.14.3"
canvasapi = "^3.6.0"
scipy = "^1.17.1"
streamlit = "^1.58.0"


[tool.poetry.group.docs.dependencies]
sphinx-autoapi = "^3.8.0"
myst-nb = "^1.4.0"
sphinx-rtd-theme = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
