[tool.poetry]
name = "my_krml_24999690"
version = "2026.2.0.0"
description = "Package for Assignment 1"
authors = ["Muhammad Iqbal"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
pandas = "2.2.2"
scikit-learn = "1.5.1"
matplotlib = "^3.10.9"
seaborn = "^0.13.2"
requests = {version = "^2.32.0", optional = true}
beautifulsoup4 = {version = "^4.14.3", optional = true}
canvasapi = {version = "^3.6.0", optional = true}
imbalanced-learn = {version = "^0.13.0", optional = true}

[tool.poetry.extras]
canvas = ["requests", "beautifulsoup4", "canvasapi"]
balance = ["imbalanced-learn"]

[tool.poetry.group.docs.dependencies]
sphinx-autoapi = "^3.8.0"
myst-nb = "^1.4.0"
sphinx-rtd-theme = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
